# narc

./: .gitignore  Cargo.toml  run.sh  sqlx-data.json
.github/workflows/: main.yml  prod.yml  staging.yml
bot/: .dockerignore  Cargo.toml  Dockerfile  run.sh  sqlx-data.json
bot/migrations/: 20210510122434_welcome-messages.sql  20210802041416_protected-users.sql
bot/src/: error_handling.rs  main.rs  serenity_utils.rs  services.rs  state.rs
bot/src/commands/: administration.rs  assistance.rs  help.rs  mod.rs
bot/src/database/: models.rs
bot/src/listeners/: mod.rs  on_msg.rs  on_reaction.rs  status_updator.rs  welcomer.rs
bot/src/parsing/: channel_mention.rs  mod.rs  user.rs
bot/src/view/: mod.rs  update_report_view.rs
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  NavBar.tsx  Router.tsx  index.tsx
frontend/src/assets/: assets.d.ts  incoming_report.webm  report_message.webm
frontend/src/pages/: LandingPage.tsx
migrations/: 000000000000000_initial-database.sql
src/: error_handling.rs  main.rs  services.rs  state.rs
src/commands/: administration.rs  assistance.rs  mod.rs
src/database/: mod.rs  models.rs
src/database/cache/: get_server_config.rs  get_server_prefix.rs  mod.rs
src/database/mutations/: make_report.rs  mod.rs  save_mod_view.rs  save_sever_configuration.rs  update_report.rs
src/database/reads/: load_report.rs  load_server_config.rs  (+4 more)
src/listeners/: mod.rs  on_reaction.rs  status_updator.rs
src/parsing/: channel_mention.rs  mod.rs  user.rs
src/view/: mod.rs  update_report_view.rs
(+19 files in other folders)
